--- a/0.8.0/Ejabberd/supervisord.conf
+++ b/0.8.0/Ejabberd/supervisord.conf
@@ -5,7 +5,7 @@ nodaemon=true
 directory=/usr/local/ejabberd
 user=ejabberd
 group=ejabberd
-command=/usr/local/ejabberd/bin/ejabberdctl start && /usr/local/ejabberd/bin/ejabberdctl started
+command=/usr/local/ejabberd/bin/ejabberdctl start && /usr/local/ejabberd/bin/ejabberdctl started && /usr/local/ejabberd/bin/ejabberdctl register admin@localhost %(ENV_EJABBERD_PASSWORD)s
 
 [program:nginx]
 command=/usr/local/nginx/sbin/nginx -g "daemon off;"
