--- a/0.8.0/Ejabberd/Dockerfile
+++ b/0.8.0/Ejabberd/Dockerfile
@@ -7,9 +7,11 @@ ARG OSP_VERSION="0.8.2"
 ARG DEFAULT_TZ="ETC/UTC"
 
 ARG DEFAULT_EJABBERD_DOMAIN="stream.example.com"
+ARG DEFAULT_EJABBERD_PASSWORD="CHANGEME"
 ARG DEFAULT_OSP_API_PROTOCOL="http"
 ARG DEFAULT_OSP_API_DOMAIN="stream.example.com"
 
+ENV EJABBERD_PASSWORD=DEFAULT_EJABBERD_PASSWORD
 ENV EJABBERD_DOMAIN=$DEFAULT_EJABBERD_DOMAIN
 ENV OSP_API_PROTOCOL=$DEFAULT_OSP_API_PROTOCOL
 ENV OSP_API_DOMAIN=$DEFAULT_OSP_API_DOMAIN
