--- a/0.8.0/Ejabberd/Dockerfile
+++ b/0.8.0/Ejabberd/Dockerfile
@@ -19,6 +19,8 @@ RUN apk add --update python3 py3-pip
 RUN pip3 install --upgrade pip
 RUN pip install requests
 
+USER 9000
+
 RUN mkdir /home/ejabberd/files
 COPY docker-files.d/entrypoint.sh /home/ejabberd/run/entrypoint.sh
 COPY docker-files.d/ejabberd.yml /home/ejabberd/run/ejabberd.yml
@@ -26,4 +28,5 @@ COPY docker-files.d/auth_osp.py /home/ejabberd/run/auth_osp.py
 
 COPY docker-files.d/inetrc /home/ejabberd/conf/inetrc
 
+RUN chmod +x /home/ejabberd/run/entrypoint.sh
 ENTRYPOINT ["/bin/sh","-c", "/home/ejabberd/run/entrypoint.sh"]
