--- a/0.8.0/Ejabberd/Dockerfile
+++ b/0.8.0/Ejabberd/Dockerfile
@@ -29,4 +29,4 @@ COPY docker-files.d/ejabberd.yml /home/ejabberd/run/ejabberd.yml
 COPY docker-files.d/auth_osp.py /home/ejabberd/run/auth_osp.py
 COPY docker-files.d/inetrc /home/ejabberd/conf/inetrc
 
-ENTRYPOINT ["/bin/sh","-c", "/home/ejabberd/run/entrypoint.sh"]
+ENTRYPOINT ["/bin/sh","-c", "/run/entrypoint.sh"]
