--- a/0.8.0/Ejabberd/Dockerfile
+++ b/0.8.0/Ejabberd/Dockerfile
@@ -18,6 +18,7 @@ USER root
 RUN apk add --update python3 py3-pip
 RUN pip3 install --upgrade pip
 RUN pip install requests
+RUN apk add --no-cache bash
 
 COPY docker-files.d/entrypoint.sh /run/entrypoint.sh
 RUN chmod +x /run/entrypoint.sh
