--- a/0.8.0/Ejabberd/Dockerfile
+++ b/0.8.0/Ejabberd/Dockerfile
@@ -10,9 +10,9 @@ ARG DEFAULT_OSP_API_PROTOCOL="http"
 ARG DEFAULT_OSP_API_DOMAIN="stream.example.com"
 
 ENV OSP_EJABBED_VERSION="0.8.3"
-ENV EJABBERD_PASSWORD=DEFAULT_EJABBERD_PASSWORD
+ENV EJABBERD_PASSWORD=$DEFAULT_EJABBERD_PASSWORD
 ENV EJABBERD_DOMAIN=$DEFAULT_EJABBERD_DOMAIN
-ENV EJABBERD_XMLRPC_ALLOWIP=DEFAULT_EJABBERD_XMLRPC_ALLOWIP
+ENV EJABBERD_XMLRPC_ALLOWIP=$DEFAULT_EJABBERD_XMLRPC_ALLOWIP
 ENV OSP_API_PROTOCOL=$DEFAULT_OSP_API_PROTOCOL
 ENV OSP_API_DOMAIN=$DEFAULT_OSP_API_DOMAIN
 
