--- a/0.8.0/Ejabberd/docker-files.d/supervisord.conf
+++ b/0.8.0/Ejabberd/docker-files.d/supervisord.conf
@@ -6,6 +6,8 @@ directory=/home/ejabberd/bin/
 user=ejabberd
 group=ejabberd
 command=/home/ejabberd/bin/ejabberdctl foreground
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
 
 [program:ejabberdConfig]
 directory=/home/ejabberd/bin/
@@ -13,3 +15,5 @@ user=ejabberd
 group=ejabberd
 autorestart=false
 command=bash -c "sleep 30 && exec /home/ejabberd/bin/ejabberdctl register admin@localhost %(ENV_EJABBERD_PASSWORD)s"
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
