--- a/0.8.0/Ejabberd/Dockerfile
+++ b/0.8.0/Ejabberd/Dockerfile
@@ -1,6 +1,18 @@
 FROM ejabberd/ecs
 MAINTAINER David Lockwood
 
+# OSP Customized EJABBERD Docker Container
+##########################################
+# EJABBERD Container for use with a deployment of Open Streaming Platform (OSP)
+#
+# Environment Variables
+# =====================
+# EJABBERD_PASSWORD - admin@localhost Password for XMLRPC
+# EJABBERD_DOMAIN - EJABBERD Chat Domain
+# EJABBERD_XMLRPC_ALLOWIP - Comma Separated Value Set of Allowed - (ex: 10.1.20.1, 102.139.10.2) (Not Working Yet.  Set to 0.0.0.0/0 in yml)
+# OSP_API_PROTOCOL - OSP API HTTP Protocol - Values: http or https
+# OSP_API_DOMAIN - OSP API HTTP FQDN
+
 ARG DEFAULT_TZ="ETC/UTC"
 
 ARG DEFAULT_EJABBERD_DOMAIN="stream.example.com"
@@ -35,6 +47,8 @@ RUN mkdir /home/ejabberd/run
 COPY docker-files.d/ejabberd.yml /home/ejabberd/run/ejabberd.yml
 COPY docker-files.d/auth_osp.py /home/ejabberd/run/auth_osp.py
 COPY docker-files.d/inetrc /home/ejabberd/conf/inetrc
+
+VOLUME ["/home/ejabberd/database"]
 
 USER root
 ENTRYPOINT ["/bin/sh","-c", "/run/entrypoint.sh"]
