--- a/0.8.0/OSP-Core/Dockerfile
+++ b/0.8.0/OSP-Core/Dockerfile
@@ -28,10 +28,10 @@ ENV FLASK_SECRET=$DEFAULT_FLASK_SECRET
 ENV FLASK_SALT=$DEFAULT_FLASK_SALT
 ENV OSP_ALLOWREGISTRATION=$DEFAULT_OSP_ALLOWREGISTRATION
 ENV OSP_REQUIREVERIFICATION=$DEFAULT_OSP_REQUIREVERIFICATION
-ENV EJABBERDADMIN=DEFAULT_OSP_EJABBERDADMIN
-ENV EJABBERDPASS=DEFAULT_OSP_EJABBERDPASS
-ENV EJABBERDHOST=DEFAULT_OSP_EJABBERDHOST
-ENV EJABBERDSERVER=DEFAULT_OSP_EJABBERDSERVER
+ENV EJABBERDADMIN=$DEFAULT_OSP_EJABBERDADMIN
+ENV EJABBERDPASS=$DEFAULT_OSP_EJABBERDPASS
+ENV EJABBERDHOST=$DEFAULT_OSP_EJABBERDHOST
+ENV EJABBERDSERVER=$DEFAULT_OSP_EJABBERDSERVER
 
 EXPOSE 80/tcp
 EXPOSE 443/tcp
