--- a/0.8.0/OSP-Core/Dockerfile
+++ b/0.8.0/OSP-Core/Dockerfile
@@ -131,11 +131,11 @@ RUN apk add python3 \
   uwsgi-python3
 
 # Upgrade PIP
+RUN pip3 install cryptography==3.3.2
 RUN pip3 install --upgrade pip
 
 # Install OSP Dependancies
 RUN pip3 install -r /opt/osp/setup/requirements.txt
-RUN pip3 install cryptography
 
 # Setup FFMPEG for recordings and Thumbnails
 RUN apk add ffmpeg
