--- a/0.8.0/OSP-RTMP/Dockerfile
+++ b/0.8.0/OSP-RTMP/Dockerfile
@@ -115,7 +115,7 @@ RUN pip3 install --upgrade pip
 
 # Install OSP Dependancies
 RUN pip3 install -r /tmp/flask-nginx-rtmp-manager/installs/osp-rtmp/setup/requirements.txt
-RUN pip3 install cryptography
+RUN pip3 install cryptography==3.3.2
 
 # Setup FFMPEG for recordings and Thumbnails
 RUN apk add ffmpeg
