--- a/0.8.0/OSP-Core/Dockerfile
+++ b/0.8.0/OSP-Core/Dockerfile
@@ -20,18 +20,18 @@ ARG DEFAULT_OSP_EJABBERDHOST="localhost"
 ARG DEFAULT_OSP_EJABBERDSERVER="127.0.0.1"
 ARG DEFAULT_TZ="ETC/UTC"
 
-ENV DB_URL=$DEFAULT_DB_URL
-ENV REDIS_HOST=$DEFAULT_REDIS_HOST
-ENV REDIS_PORT=$DEFAULT_REDIS_PORT
-ENV REDIS_PASSWORD=$DEFAULT_REDIS_PASSWORD
-ENV FLASK_SECRET=$DEFAULT_FLASK_SECRET
-ENV FLASK_SALT=$DEFAULT_FLASK_SALT
-ENV OSP_ALLOWREGISTRATION=$DEFAULT_OSP_ALLOWREGISTRATION
-ENV OSP_REQUIREVERIFICATION=$DEFAULT_OSP_REQUIREVERIFICATION
-ENV EJABBERDADMIN=$DEFAULT_OSP_EJABBERDADMIN
-ENV EJABBERDPASS=$DEFAULT_OSP_EJABBERDPASS
-ENV EJABBERDHOST=$DEFAULT_OSP_EJABBERDHOST
-ENV EJABBERDSERVER=$DEFAULT_OSP_EJABBERDSERVER
+ENV DB_URL=${DEFAULT_DB_URL}
+ENV REDIS_HOST=${DEFAULT_REDIS_HOST}
+ENV REDIS_PORT=${DEFAULT_REDIS_PORT}
+ENV REDIS_PASSWORD=${DEFAULT_REDIS_PASSWORD}
+ENV FLASK_SECRET=${DEFAULT_FLASK_SECRET}
+ENV FLASK_SALT=${DEFAULT_FLASK_SALT}
+ENV OSP_ALLOWREGISTRATION=${DEFAULT_OSP_ALLOWREGISTRATION}
+ENV OSP_REQUIREVERIFICATION=${DEFAULT_OSP_REQUIREVERIFICATION}
+ENV EJABBERDADMIN=${DEFAULT_OSP_EJABBERDADMIN}
+ENV EJABBERDPASS=${DEFAULT_OSP_EJABBERDPASS}
+ENV EJABBERDHOST=${DEFAULT_OSP_EJABBERDHOST}
+ENV EJABBERDSERVER=${DEFAULT_OSP_EJABBERDSERVER}
 
 EXPOSE 80/tcp
 EXPOSE 443/tcp
