--- a/0.8.0/OSP-Core/Dockerfile
+++ b/0.8.0/OSP-Core/Dockerfile
@@ -14,9 +14,7 @@ ARG DEFAULT_FLASK_SECRET="CHANGEME"
 ARG DEFAULT_FLASK_SALT="CHANGEME"
 ARG DEFAULT_OSP_ALLOWREGISTRATION="True"
 ARG DEFAULT_OSP_REQUIREVERIFICATION="True"
-ARG DEFAULT_OSP_EJABBERDADMIN="admin"
 ARG DEFAULT_OSP_EJABBERDPASS="CHANGEME"
-ARG DEFAULT_OSP_EJABBERDHOST="localhost"
 ARG DEFAULT_OSP_EJABBERDSERVER="127.0.0.1"
 ARG DEFAULT_TZ="ETC/UTC"
 
@@ -28,9 +26,9 @@ ENV FLASK_SECRET=${DEFAULT_FLASK_SECRET}
 ENV FLASK_SALT=${DEFAULT_FLASK_SALT}
 ENV OSP_ALLOWREGISTRATION=${DEFAULT_OSP_ALLOWREGISTRATION}
 ENV OSP_REQUIREVERIFICATION=${DEFAULT_OSP_REQUIREVERIFICATION}
-ENV EJABBERDADMIN=${DEFAULT_OSP_EJABBERDADMIN}
+ENV EJABBERDADMIN="admin"
 ENV EJABBERDPASS=${DEFAULT_OSP_EJABBERDPASS}
-ENV EJABBERDHOST=${DEFAULT_OSP_EJABBERDHOST}
+ENV EJABBERDHOST="localhost"
 ENV EJABBERDSERVER=${DEFAULT_OSP_EJABBERDSERVER}
 
 EXPOSE 80/tcp
